updated push to be manual

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,7 @@
 name: Deployment
 on:
-  push:
-    branches:
-      - main
-      - dev
+  workflow_dispatch:
+
 env:
   MONGODB_DB_NAME: gha-demo
 jobs:
@@ -29,7 +27,8 @@ jobs:
       - name: Run tests
         run: npm test
       - name: Output information
-        run: echo "MONGODB_USERNAME=${{ env.MONGODB_USERNAME }}"
+        run: |
+          echo "MONGODB_USERNAME=${{ env.MONGODB_USERNAME }}"
   deploy:
     needs: test
     runs-on: ubuntu-latest
